--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,22 @@
 version: '3.8'
 services:
-  nodejs_clusters:
+  clusters:
     build:
       context: .
       dockerfile: Dockerfile
     restart: always
+    ports:
+      - '3001:3001' # pasti ada...
     environment:
-      - WORKER=10
+      - WORKER=16
 
       # inject on secret...
       - MONGO_URL=
       - MONGO_NAME=
     networks:
       - my_network
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
   nginx:
     image: nginx:latest
     restart: always
@@ -21,12 +25,12 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      - nodejs_clusters
+      - clusters
     networks:
       my_network:
         aliases:
           - localhost
-          - nodejs_clusters
+          - clusters
           - nginx
     extra_hosts:
       - 'host.docker.internal:host-gateway'
