--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
+    "axios": "0.27.2",
     "dotenv": "^16.4.5",
     "uuid": "^9.0.1"
   },
