--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
-    "axios": "0.27.2",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
-    "uuid": "^9.0.1"
+    "formidable": "^3.5.1"
   },
   "devDependencies": {
     "pkg": "^5.8.1"
